--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Asaduzzaman",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^5.10.2",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/node": "^20.11.24",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
@@ -27,9 +28,12 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "express": "^4.18.3",
+    "http-status": "^1.7.4",
     "prettier": "^3.2.5",
+    "prisma": "^5.10.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
