--- a/package.json
+++ b/package.json
@@ -19,16 +19,22 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.10.2",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
     "@types/eslint-config-prettier": "^6.11.3",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.24",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "express": "^4.18.3",
     "http-status": "^1.7.4",
+    "jsonwebtoken": "^9.0.2",
     "prettier": "^3.2.5",
     "prisma": "^5.10.2",
     "ts-node": "^10.9.2",
